@@ -1,3 +1,9 @@
+2002-11-03  John Harper  <jsh@unfactored.org>
+
+	* widgets/font.jl (make-font-item): minimal changes to accept
+	new typed font descriptions (though we just assume it's always
+	xlfd, which is pretty harmless)
+
 2002-05-14  John Harper  <jsh@unfactored.org>
 
 	* widgets/font.jl (make-font-item): made entry uneditable
